=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.03-dev - 

wrap blib loading in eval block (added to autogenerated files), to
prevent 'make clean' failures. [Stas]

add two more variants of each of the tracing functions. If the '_mark'
suffix is appended (e.g., 'error_mark') the trace will start with the
filename and the line number the function was called from. If the
'_sub' suffix is appended (e.g., 'error_info') the trace will start
with the name of the subroutine the function was called from. [Stas]

introduce a new env var APACHE_TEST_TRACE_LEVEL, to override the trace
level. Propogate the overriden values (either by env var
APACHE_TEST_TRACE_LEVEL or -trace option) to the server-side, so we
can use tracing in the handlers, and enable disable traces from the
commmand line. This way we don't have to comment out debug
tracing. [Stas]

=item 1.02

not released

=item 1.01 - May  1, 2003

improved support for 3rd party modules test configuration setup:
automatically include 'use blib' in autogenerated t/TEST and add 'use
Apache2' in the startup file for mod_perl 2.0. [Stas]

new configuration option: -libmodperl [path/to/]mod_perl.so (so one
can build several DSO objects, rename them, so several builds can
co-exist under the same LIBEXECDIR and test them all. Mainly useful
for testing 3rd party modules, with different mod_perl DSO builds. [Stas]

set $Apache::Test5005compat::VERSION because of the bogus warnings
generated by EU::MM::parse_version() when it sees
$NOT_THIS_MODULE::VERSION [Randal L. Schwartz <merlyn@stonehenge.com>]

a few fixes in Makefile.PL and t/TEST.PL to work with perl-5.005_03
[Stas]

perlpods are found either in the 'pods/' or 'pod/' subdirs [Randal
L. Schwartz <merlyn@stonehenge.com>]

Autoconfigure Alias /getfiles-* only if the corresponding targets
exist [Stas]

=item 1.00 - Apr 28, 2003 

when inheriting httpd.conf on some platforms SERVER_CONFIG_FILE is an